--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-    "name": "gameplex website",
+    "name": "gameplex_website",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "axios": "^0.19.2",
+        "firebase": "^7.13.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1"
