--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,19 +3,29 @@
     "name": "Gameplex",
     "icons": [
         {
-            "src": "favicon.ico",
-            "sizes": "64x64 32x32 24x24 16x16",
-            "type": "image/x-icon"
+            "src": "android-icon-36x36.png",
+            "type": "image/png",
+            "sizes": "36x36"
         },
         {
-            "src": "logo192.png",
+            "src": "android-icon-48x48.png",
             "type": "image/png",
-            "sizes": "192x192"
+            "sizes": "48x48"
         },
         {
-            "src": "logo512.png",
+            "src": "android-icon-72x72.png",
             "type": "image/png",
-            "sizes": "512x512"
+            "sizes": "72x72"
+        },
+        {
+            "src": "android-icon-96x96.png",
+            "type": "image/png",
+            "sizes": "96x96"
+        },
+        {
+            "src": "android-icon-144x144.png",
+            "type": "image/png",
+            "sizes": "144x144"
         }
     ],
     "start_url": ".",
